Commit version 1.1: Including stringend calculator, and switch case for main scenarios. Optimization in progress
Note: Version 2.0 = replace buttons with icons

--- a/app/src/main/res/layout/activity_levelselector.xml
+++ b/app/src/main/res/layout/activity_levelselector.xml
@@ -13,7 +13,7 @@
         android:layout_height="99dp"
         android:foregroundGravity="center_vertical|clip_horizontal"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="Choose your own adventure"
+        android:text="@string/choose_your_own_adventure"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         android:textStyle="bold"
